--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 /** @format */
 
 @import './partials/fonts';
+@import './partials/colors';
 
 * {
   box-sizing: border-box;
@@ -9,4 +10,34 @@
 body {
   padding: 0;
   margin: 0;
+  background-image: url('./images/rocket_takeoff.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: $black;
+  color: $white;
+
+  .app {
+    height: 100vh;
+    width: 100vw;
+    background: transparentize($black, 0.7);
+    .landing {
+      padding: calc(1vh + 1vw);
+
+      .banner {
+        display: flex;
+        flex-direction: row;
+        height: 50vh;
+        padding: 20px;
+        align-items: center;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
