--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ body {
   .app {
     height: 100vh;
     width: 100vw;
+    overflow-y: scroll;
     background: transparentize($black, 0.7);
     .landing {
       padding: calc(1vh + 1vw);
@@ -30,12 +31,182 @@ body {
       .banner {
         display: flex;
         flex-direction: row;
-        height: 50vh;
+        // height: 50vh;
         padding: 20px;
         align-items: center;
+        flex-wrap: wrap-reverse;
+        .text {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          gap: 40px;
+
+          .leading {
+            font-size: 50px;
+            font-family: b;
+            letter-spacing: 1px;
+            .highlight {
+              color: $purple;
+              text-shadow: transparentize($white, 0.4) 0 0 100px;
+            }
+          }
+
+          .trailing {
+            font-size: 20px;
+            opacity: 0.4;
+          }
+
+          .actions {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            // justify-content: space-between;
+
+            button {
+              background: $purple;
+              color: $white;
+              font-size: 14px;
+              border: none;
+              padding: 10px 40px;
+              text-transform: uppercase;
+              border-radius: 20px;
+            }
+          }
+
+          .stats {
+            display: flex;
+            align-items: center;
+            // gap: 50px;
+            gap: 10%;
+            justify-content: flex-start;
+
+            .stat {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              width: fit-content;
+              //   gap: 10px;
+              .main {
+                font-size: 40px;
+                // font-family: sb;
+              }
+              .desc {
+                font-family: l;
+                opacity: 0.6;
+              }
+            }
+          }
+        }
         img {
-          width: 100%;
+          //   width: 100%;
+          flex: 1;
           height: 100%;
+          max-height: 60vh;
+          max-width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    .app {
+      height: 100vh;
+      width: 100vw;
+      overflow-y: scroll;
+      background: transparentize($black, 0.7);
+      .landing {
+        padding: calc(1vh + 1vw);
+
+        .banner {
+          display: flex;
+          flex-direction: row;
+          // height: 50vh;
+          padding: 20px;
+          align-items: center;
+          flex-wrap: wrap-reverse;
+          .text {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+
+            .leading {
+              font-size: 35px;
+              font-family: b;
+              letter-spacing: 1px;
+              margin-top: 30px;
+              .highlight {
+                color: $purple;
+                text-shadow: transparentize($white, 0.4) 0 0 100px;
+              }
+            }
+
+            .trailing {
+              font-family: l;
+              font-size: 16px;
+              letter-spacing: 1px;
+              opacity: 0.8;
+            }
+
+            .actions {
+              button {
+                background: $purple;
+                color: $white;
+                font-size: 14px;
+                border: none;
+                padding: 10px 40px;
+                text-transform: uppercase;
+                border-radius: 20px;
+              }
+
+              .social-links {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 20px;
+
+                svg {
+                  transform: scale(1.2);
+                }
+              }
+            }
+
+            .stats {
+              display: flex;
+              align-items: center;
+              // gap: 50px;
+              justify-content: space-between;
+
+              .stat {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                width: fit-content;
+                //   gap: 10px;
+                .main {
+                  font-size: 30px;
+                  // font-family: sb;
+                }
+                .desc {
+                  font-family: l;
+                  opacity: 0.6;
+                }
+              }
+            }
+          }
+          img {
+            //   width: 100%;
+            flex: 1;
+            height: 100%;
+            max-height: 60vh;
+            max-width: 100%;
+            border-radius: 20px;
+            box-shadow: transparentize($purple, 0.5) 0 0 50px;
+          }
         }
       }
     }
