--- a/src/index.scss
+++ b/src/index.scss
@@ -44,8 +44,9 @@ body {
           .leading {
             font-size: 50px;
             font-family: b;
-            letter-spacing: 1px;
+            letter-spacing: 1.2px;
             .highlight {
+              font-family: b;
               color: $purple;
               text-shadow: transparentize($white, 0.4) 0 0 100px;
             }
@@ -53,23 +54,41 @@ body {
 
           .trailing {
             font-size: 20px;
-            opacity: 0.4;
+            letter-spacing: 1px;
+            opacity: 1;
           }
 
           .actions {
             display: flex;
             align-items: center;
-            gap: 20px;
+            gap: 50px;
             // justify-content: space-between;
 
             button {
               background: $purple;
               color: $white;
-              font-size: 14px;
+              font-size: 18px;
               border: none;
-              padding: 10px 40px;
+              padding: 20px 50px;
               text-transform: uppercase;
-              border-radius: 20px;
+              border-radius: 30px;
+              letter-spacing: 1.2px;
+              cursor: pointer;
+              transition: 0.3s ease-in-out;
+              &:hover {
+                color: $purple;
+                background: $white;
+              }
+            }
+            .social-links {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap: 50px;
+
+              svg {
+                transform: scale(2);
+              }
             }
           }
 
@@ -104,6 +123,8 @@ body {
           height: 100%;
           max-height: 60vh;
           max-width: 100%;
+          border-radius: 80px 80px 0 0;
+          box-shadow: $purple 0 0 100px;
         }
       }
     }
@@ -113,34 +134,16 @@ body {
 @media only screen and (max-width: 600px) {
   body {
     .app {
-      height: 100vh;
-      width: 100vw;
-      overflow-y: scroll;
-      background: transparentize($black, 0.7);
       .landing {
-        padding: calc(1vh + 1vw);
-
         .banner {
-          display: flex;
-          flex-direction: row;
-          // height: 50vh;
-          padding: 20px;
-          align-items: center;
-          flex-wrap: wrap-reverse;
           .text {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            gap: 40px;
-
             .leading {
               font-size: 35px;
-              font-family: b;
+
               letter-spacing: 1px;
               margin-top: 30px;
               .highlight {
-                color: $purple;
-                text-shadow: transparentize($white, 0.4) 0 0 100px;
+                text-shadow: transparentize($white, 0.1) 0 0 10px;
               }
             }
 
@@ -152,6 +155,7 @@ body {
             }
 
             .actions {
+              gap: 20px;
               button {
                 background: $purple;
                 color: $white;
