--- a/src/index.scss
+++ b/src/index.scss
@@ -215,7 +215,7 @@ body {
         // margin: 10px 0;
         padding: 20px;
         background: $white;
-        border-radius: 0 0 10px 10px;
+        // border-radius: 0 0 10px 10px;
         border: none;
         color: black;
         .capsule {
@@ -243,6 +243,28 @@ body {
             bottom: 20px;
             text-transform: uppercase;
           }
+        }
+      }
+
+      .pager {
+        background: $white;
+        border-radius: 0 0 10px 10px;
+
+        display: flex;
+        align-items: center;
+        color: black;
+        justify-content: space-between;
+        padding: 10px;
+
+        button {
+          align-items: center;
+          justify-content: center;
+          padding: 18px;
+          width: 200px;
+          font-size: 16px;
+          background: $purple;
+          color: $white;
+          border-radius: 10px;
         }
       }
     }
